# datadog-client

./: Cargo.toml  readme.md
.circleci/: config.yml
src/: client.rs  events.rs  lib.rs  metrics.rs
